--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,24 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-lib
 
 include_directories("include")
 
-add_executable(aboawt
-        src/main.cpp
+add_library(aboawt-global STATIC
         src/Application/Definitions.cpp
         src/Application/Utils.cpp
-        src/Swap/SwapManager.cpp)
+        src/Swap/SwapManager.cpp
+        src/Application/Core.cpp
+        src/Android/BatteryManager.cpp
+        src/Android/Classpaths.cpp
+        src/CmdLine.cpp
+        src/Application/PkgMgr.cpp)
+
+add_executable(aboawt src/main.cpp)
+
+target_link_libraries(aboawt PRIVATE aboawt-global)
+
+if (EXISTS "${CMAKE_SOURCE_DIR}/src/TestMain.cpp")
+    message("Creating testing executable")
+
+    add_executable(aboawt-test src/TestMain.cpp)
+
+    target_link_libraries(aboawt-test PRIVATE aboawt-global)
+endif ()
